force-app/main/default/objects/Contact_Person__c/Contact_Person__c.object-meta.xml
<CustomObject>
    <description>Contact Person is a child of Membership. A contact person is a relative, added to a membership record.</description>
    <label>Contact Person</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Persons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>