force-app/main/default/objects/Contact_Person__c/fields/Member_CPR__c.field-meta.xml
<CustomField>
    <fullName>Member_CPR__c</fullName>
    <inlineHelpText>Skal kun udfyldes hvis du opretter et Medlem - Ikke hvis du opretter en Pårørende.
Skriv medlemmets CPR-nummer, med bindstreg.
F.eks. 010190-9999</inlineHelpText>
    <label>Member CPR</label>
    <length>11</length>
    <type>Text</type>
</CustomField>