force-app/main/default/objects/Contact_Person__c/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <label>Membership</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipLabel>Contact Persons</relationshipLabel>
    <relationshipName>Contact_Persons</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>