force-app/main/default/objects/Contact_Person__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <inlineHelpText>The phone number of the contact person</inlineHelpText>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>