force-app/main/default/objects/Contact_Person__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Vælg om den Contact Person du opretter er vores nye medlem, eller en af dennes pårørende</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medlem</fullName>
            </value>
            <value>
                <fullName>Pårørende</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>