force-app/main/default/objects/Contact_Person__c/recordTypes/mathias_test_record_type.recordType-meta.xml
<RecordType>
    <fullName>mathias_test_record_type</fullName>
    <active>true</active>
    <label>mathias-test-record-type</label>
</RecordType>